k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promotions
  labels:
    app: promotions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promotions
  template:
    metadata:
      labels:
        app: promotions
    spec:
      containers:
        - name: promotions
          image: promotions:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          command: ["gunicorn"]
          args: ["-b", "0.0.0.0:8080", "wsgi:app"]
